fdo#80905 SwXTextFieldMasters::hasByName(): sync with SwXFieldMaster

Normally a mail merge field has a name like
"css.text.fieldmaster.DataBase.<datasource name>.<table name>.<column
name>", however this isn't enforced: just
"css.text.fieldmaster.DataBase.TEST" is also accepted (even if its
semantics are ~undefined).

If SwXFieldMaster::setPropertyValue() allows setting such a field master
name, then SwXTextFieldMasters::hasByName() should not ignore such field
masters that have no dot in their name ("TEST") or use "Database", not
"DataBase", otherwise (sane) client code in writerfilter ends up with
hasByName() returning false, but setPropertyValue() throwing an
exception, because the field master does have such a name.

This fixes DOCX/RTF import of multiple mail merge fields with the same
field command.

Change-Id: I498eabace25f8e466b3504ba13fa3060d4ba22da